<resources>
    <string name="app_name">DemoRoomDB</string>
    <string name="button_save">Connect</string>
    <string name="hint_word">Tablet ID</string>
    <string name="hint_port">Tablet Port</string>
    <string name="hint_ipaddress">IP Address</string>
    <string name="hint_name">Full Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="dataError">Please input Username and Password</string>
    <string name="passwordError">Password is invalid</string>
    <string name="addItem">Add Data</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_phone">Phone number</string>
    <string name="hint_role">Role</string>
    <string name="hint_age">Age</string>
    <string name="cancel">Cancel</string>
    <string name="setting">Setting</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="scanner">Camera</string>
    <string name="list">List</string>
    <string name="list_contact">List Contact</string>
    <string name="list_message">Messages</string>
    <string name="notification">Notification</string>
    <string name="default_notification_channel_id">New Notice</string>
    <string name="default_notification_channel_name">Default Name</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>
    <string name="logout">Logout</string>
    <string name="failed_login">Login failed ! Please check your credentials</string>
    <string name="register">Register</string>
    <string name="account_created">Create new account !?</string>
    <string name="full_name">Full name</string>
    <string name="message">Message</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="status">status</string>

</resources>
