<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegisterActivity">

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/buttonLabel"
        android:textColorHint="@color/buttonLabel"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.169" />

    <EditText
        android:id="@+id/edt_register_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shape_bg"
        android:ems="10"
        android:hint="@string/fui_email_hint"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/buttonLabel"
        android:textColorHint="@color/buttonLabel"
        app:layout_constraintEnd_toEndOf="@+id/tv_register"
        app:layout_constraintStart_toStartOf="@+id/tv_register"
        app:layout_constraintTop_toBottomOf="@+id/tv_register"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edt_register_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_bg"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="@color/buttonLabel"
        app:layout_constraintEnd_toEndOf="@+id/edt_register_email"
        app:layout_constraintStart_toStartOf="@+id/edt_register_email"
        app:layout_constraintTop_toBottomOf="@+id/edt_register_email"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edt_register_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_bg"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/buttonLabel"
        android:textColorHint="@color/buttonLabel"
        app:layout_constraintEnd_toEndOf="@+id/edt_register_username"
        app:layout_constraintStart_toStartOf="@+id/edt_register_username"
        app:layout_constraintTop_toBottomOf="@+id/edt_register_username"
        android:autofillHints="" />

    <Button
        android:id="@+id/btn_registered"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shape_bg"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/register"
        android:onClick="onRegisterUser"
        app:layout_constraintEnd_toEndOf="@+id/edt_register_password"
        app:layout_constraintStart_toStartOf="@+id/edt_register_password"
        app:layout_constraintTop_toBottomOf="@+id/edt_register_password" />


</androidx.constraintlayout.widget.ConstraintLayout>